<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:layout_marginStart="@dimen/activity_horizontal_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/item_profile_parent_page">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/activity_horizontal_margin" >

            <TextView
                android:id="@+id/rfid_tag_num_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/RFID_TAG_NUMBER"
                android:textSize="15sp"
                android:textColor="#9e9e9e" />

            <TextView
                android:id="@+id/rfid_tag_num_textbox"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="18sp"
                android:textColor="@color/mediumGray" />
        </LinearLayout>

        <include layout="@layout/item_divider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/activity_horizontal_margin" >

            <TextView
                android:id="@+id/last_location_textbox_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/LAST_KNOWN_LOCATION"
                android:textSize="15sp"
                android:textColor="#9e9e9e" />

            <TextView
                android:id="@+id/last_location_textbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/mediumGray" />
        </LinearLayout>

        <include layout="@layout/item_divider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/activity_horizontal_margin" >

            <TextView
                android:id="@+id/serial_num_textbox_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/SERIAL_NUMBER"
                android:textSize="15sp"
                android:textColor="#9e9e9e" />

            <TextView
                android:id="@+id/serial_num_textbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/mediumGray" />
        </LinearLayout>

        <include layout="@layout/item_divider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/activity_horizontal_margin" >

            <TextView
                android:id="@+id/original_price_textbox_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ORIGINAL_PRICE"
                android:textSize="15sp"
                android:textColor="#9e9e9e" />

            <TextView
                android:id="@+id/original_price_textbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/mediumGray" />
        </LinearLayout>

        <include layout="@layout/item_divider" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:padding="@dimen/activity_horizontal_margin"
            android:focusable="true">

            <TextView
                android:id="@+id/tag_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/tag_color"
                android:textSize="15sp"
                android:textColor="#9e9e9e" />
        </RelativeLayout>

        <RadioGroup
            android:id="@+id/roleRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/mediumGray"
            android:orientation="horizontal"
            android:checkedButton="@+id/tag_color_selected"
            android:padding="@dimen/activity_horizontal_margin">

            <RadioButton
                android:id="@+id/no_tag_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="#9e9e9e"
                android:text="@string/none_radio"
                android:textSize="15sp"
                android:enabled="false"/>

            <RadioButton
                android:id="@+id/green_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="#9e9e9e"
                android:text="@string/green_radio"
                android:textSize="15sp"
                android:textColor="#1b5e20"
                android:enabled="false" />

            <RadioButton
                android:id="@+id/red_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="#9e9e9e"
                android:text="@string/red_radio"
                android:textColor="#b71c1c"
                android:textSize="15sp"
                android:enabled="false" />

        </RadioGroup>

        <include layout="@layout/item_divider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin" >

            <TextView
                android:id="@+id/description_text_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/DESCRIPTION"
                android:textSize="15sp"
                android:textColor="#9e9e9e" />

            <TextView
                android:id="@+id/description_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/mediumGray" />

        </LinearLayout>

        <include layout="@layout/item_divider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="horizontal">

            <RadioGroup
                android:id="@+id/statusRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#2b2b2b"
                android:checkedButton="@+id/tag_color_selected"
                android:orientation="horizontal"
                android:padding="@dimen/activity_horizontal_margin">

                <RadioButton
                    android:id="@+id/statusActive"
                    android:checked="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:enabled="false"
                    android:text="@string/radio_active"
                    android:textColor="#2b2b2b"
                    android:textSize="15sp" />

                <RadioButton
                    android:id="@+id/statusSurplus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:enabled="false"
                    android:text="@string/radio_surplus"
                    android:textColor="#2b2b2b"
                    android:textSize="15sp" />

                <RadioButton
                    android:id="@+id/statusOther"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:enabled="false"
                    android:text="@string/radio_other"
                    android:textColor="#2b2b2b"
                    android:textSize="15sp" />

            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_other_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/otherStatusDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"
                android:text="@string/other_status_description"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />

        </LinearLayout>

    </LinearLayout>


</android.support.v4.widget.NestedScrollView>